--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 3:17:28 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 3:18:11 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,15 +141,15 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Luke Watson</td>
-      <td class="bigbold">-18</td>
+      <td class="bigbold">-17</td>
       <td>Scottie Scheffler -9
 E thru 2</td>
       <td>Cameron Smith(W) -8
 -2 thru 2</td>
       <td>Corey Conners -1
 E thru 5</td>
-      <td>Talor Gooch E
--3 thru 9</td>
+      <td>Talor Gooch +1
+-2 thru 10</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
@@ -205,15 +205,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Doug Muir</td>
-      <td class="bigbold">-15</td>
+      <td class="bigbold">-14</td>
       <td>Scottie Scheffler(W) -9
 E thru 2</td>
       <td>Cameron Smith -8
 -2 thru 2</td>
-      <td>Hideki Matsuyama +2
-E thru 8</td>
       <td>Will Zalatoris +2
 E thru 8</td>
+      <td>Hideki Matsuyama +3
++1 thru 9</td>
       <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -316,22 +316,6 @@ E thru 8</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">The Resort</td>
-      <td class="bigbold">-10</td>
-      <td>Cameron Smith(W) -8
--2 thru 2</td>
-      <td>Shane Lowry -3
--1 thru 3</td>
-      <td>Corey Conners -1
-E thru 5</td>
-      <td>Hideki Matsuyama +2
-E thru 8</td>
-      <td class="greyout leftborder">Viktor Hovland +3
-E thru 9</td>
-      <td class="greyout">Jon Rahm +4
--3 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Santorini Sunsets</td>
       <td class="bigbold">-9</td>
       <td>Scottie Scheffler -9
@@ -346,6 +330,22 @@ E thru 9</td>
 -1 (F)</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">The Resort</td>
+      <td class="bigbold">-9</td>
+      <td>Cameron Smith(W) -8
+-2 thru 2</td>
+      <td>Shane Lowry -3
+-1 thru 3</td>
+      <td>Corey Conners -1
+E thru 5</td>
+      <td>Viktor Hovland +3
+E thru 9</td>
+      <td class="greyout leftborder">Hideki Matsuyama +3
++1 thru 9</td>
+      <td class="greyout">Jon Rahm +4
+-3 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Baggy Pants</td>
@@ -365,33 +365,17 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jack Fleck</td>
-      <td class="bigbold">-9</td>
+      <td class="bigbold">-8</td>
       <td>Cameron Smith -8
 -2 thru 2</td>
       <td>Rory McIlroy(W) -2
 -3 thru 7</td>
       <td>Justin Thomas -1
 E thru 4</td>
-      <td>Hideki Matsuyama +2
-E thru 8</td>
+      <td>Hideki Matsuyama +3
++1 thru 9</td>
       <td class="greyout leftborder">Tiger Woods +13
 +6 (F)</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Bill Hunter</td>
-      <td class="bigbold">-8</td>
-      <td>Cameron Smith(W) -8
--2 thru 2</td>
-      <td>Corey Conners -1
-E thru 5</td>
-      <td>Justin Thomas -1
-E thru 4</td>
-      <td>Hideki Matsuyama +2
-E thru 8</td>
-      <td class="greyout leftborder">Marc Leishman +5
-+2 thru 9</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -412,19 +396,19 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Ron Harrington</td>
+      <td class="bigbold">Bill Hunter</td>
       <td class="bigbold">-7</td>
-      <td>Cameron Smith -8
+      <td>Cameron Smith(W) -8
 -2 thru 2</td>
       <td>Corey Conners -1
 E thru 5</td>
-      <td>Talor Gooch E
--3 thru 9</td>
-      <td>Hideki Matsuyama +2
-E thru 8</td>
-      <td class="greyout leftborder">Jon Rahm(W) +4
--3 (F)</td>
-      <td class="greyout">Brooks Koepka
+      <td>Justin Thomas -1
+E thru 4</td>
+      <td>Hideki Matsuyama +3
++1 thru 9</td>
+      <td class="greyout leftborder">Marc Leishman +5
++2 thru 10</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -457,6 +441,22 @@ E thru 8</td>
       <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Ron Harrington</td>
+      <td class="bigbold">-5</td>
+      <td>Cameron Smith -8
+-2 thru 2</td>
+      <td>Corey Conners -1
+E thru 5</td>
+      <td>Talor Gooch +1
+-2 thru 10</td>
+      <td>Hideki Matsuyama +3
++1 thru 9</td>
+      <td class="greyout leftborder">Jon Rahm(W) +4
+-3 (F)</td>
+      <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
@@ -812,22 +812,6 @@ E thru 9</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Roy Jeffrey A</td>
-      <td class="bigbold">12</td>
-      <td>Justin Thomas -1
-E thru 4</td>
-      <td>Hideki Matsuyama +2
-E thru 8</td>
-      <td>Jon Rahm(W) +4
--3 (F)</td>
-      <td>Patrick Cantlay +7
--1 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Al Shulman</td>
       <td class="bigbold">13</td>
       <td>Justin Thomas(W) -1
@@ -844,18 +828,18 @@ E thru 9</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Shane Hosegood</td>
-      <td class="bigbold">14</td>
-      <td>Collin Morikawa(W) +1
-E thru 7</td>
-      <td>Hideki Matsuyama +2
-E thru 8</td>
-      <td>Jon Rahm +4
+      <td class="bigbold">Roy Jeffrey A</td>
+      <td class="bigbold">13</td>
+      <td>Justin Thomas -1
+E thru 4</td>
+      <td>Hideki Matsuyama +3
++1 thru 9</td>
+      <td>Jon Rahm(W) +4
 -3 (F)</td>
       <td>Patrick Cantlay +7
 -1 (F)</td>
-      <td class="greyout leftborder">Paul Casey
-Out With Injury</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
@@ -873,6 +857,22 @@ E thru 7</td>
       <td class="greyout leftborder">Brooks Koepka(W)
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Shane Hosegood</td>
+      <td class="bigbold">15</td>
+      <td>Collin Morikawa(W) +1
+E thru 7</td>
+      <td>Hideki Matsuyama +3
++1 thru 9</td>
+      <td>Jon Rahm +4
+-3 (F)</td>
+      <td>Patrick Cantlay +7
+-1 (F)</td>
+      <td class="greyout leftborder">Paul Casey
+Out With Injury</td>
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
