--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 3:19:37 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 3:20:20 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -252,6 +252,22 @@ E thru 9</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Tom Davis</td>
+      <td class="bigbold">-12</td>
+      <td>Cameron Smith -8
+-2 thru 2</td>
+      <td>Shane Lowry -3
+-1 thru 3</td>
+      <td>Corey Conners -1
+E thru 5</td>
+      <td>Dustin Johnson(W) E
+-1 thru 8</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
+-1 (F)</td>
+      <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Jon Hosegood</td>
       <td class="bigbold">-11</td>
       <td>Scottie Scheffler -9
@@ -282,22 +298,6 @@ E thru 5</td>
 -3 (F)</td>
       <td class="greyout">Patrick Cantlay +7
 -1 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Tom Davis</td>
-      <td class="bigbold">-11</td>
-      <td>Cameron Smith -8
--2 thru 2</td>
-      <td>Shane Lowry -3
--1 thru 3</td>
-      <td>Corey Conners -1
-E thru 5</td>
-      <td>Dustin Johnson(W) +1
-E thru 7</td>
-      <td class="greyout leftborder">Patrick Cantlay +7
--1 (F)</td>
-      <td class="greyout">Louis Oosthuizen
-Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
@@ -685,17 +685,33 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Lorette Hosegood</td>
-      <td class="bigbold">6</td>
+      <td class="bigbold">5</td>
       <td>Rory McIlroy(W) -2
 -3 thru 7</td>
-      <td>Dustin Johnson +1
-E thru 7</td>
+      <td>Dustin Johnson E
+-1 thru 8</td>
       <td>Viktor Hovland +3
 E thru 9</td>
       <td>Jon Rahm +4
 -3 (F)</td>
       <td class="greyout leftborder">Patrick Cantlay +7
 -1 (F)</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Wild Billy Mitchell</td>
+      <td class="bigbold">6</td>
+      <td>Shane Lowry -3
+-1 thru 3</td>
+      <td>Dustin Johnson(W) E
+-1 thru 8</td>
+      <td>Matthew Fitzpatrick +3
+-1 thru 14</td>
+      <td>Tony Finau +6
++2 thru 14</td>
+      <td class="greyout leftborder">Louis Oosthuizen
+Missed Cut</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
@@ -712,22 +728,6 @@ E thru 7</td>
 -3 (F)</td>
       <td class="greyout leftborder">Daniel Berger +15
 +8 (F)</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Wild Billy Mitchell</td>
-      <td class="bigbold">7</td>
-      <td>Shane Lowry -3
--1 thru 3</td>
-      <td>Dustin Johnson(W) +1
-E thru 7</td>
-      <td>Matthew Fitzpatrick +3
--1 thru 14</td>
-      <td>Tony Finau +6
-+2 thru 14</td>
-      <td class="greyout leftborder">Louis Oosthuizen
-Missed Cut</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
@@ -845,11 +845,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">CRED</td>
-      <td class="bigbold">15</td>
+      <td class="bigbold">14</td>
       <td>Scottie Scheffler -9
 E thru 2</td>
-      <td>Dustin Johnson +1
-E thru 7</td>
+      <td>Dustin Johnson E
+-1 thru 8</td>
       <td>Patrick Cantlay +7
 -1 (F)</td>
       <td>Adam Scott +14
@@ -893,9 +893,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">17</td>
-      <td>Dustin Johnson +1
-E thru 7</td>
+      <td class="bigbold">16</td>
+      <td>Dustin Johnson E
+-1 thru 8</td>
       <td>Viktor Hovland +3
 E thru 9</td>
       <td>Jon Rahm +4
