--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 3:19:37 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 3:20:20 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -269,13 +269,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
-      <td class="bigbold">6</td>
+      <td class="bigbold">5</td>
       <td>Justin Thomas -1
 E thru 4</td>
       <td>Corey Conners -1
 E thru 5</td>
-      <td>Dustin Johnson +1
-E thru 7</td>
+      <td>Dustin Johnson E
+-1 thru 8</td>
       <td>Russell Henley +5
 -2 (F)</td>
       <td class="greyout leftborder">Xander Schauffele(W)
@@ -333,9 +333,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">17</td>
-      <td>Dustin Johnson +1
-E thru 7</td>
+      <td class="bigbold">16</td>
+      <td>Dustin Johnson E
+-1 thru 8</td>
       <td>Viktor Hovland +3
 E thru 9</td>
       <td>Jon Rahm +4
