--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 3:29:39 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 3:30:22 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,9 +141,9 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-13</td>
-      <td>Scottie Scheffler -9
-E thru 2</td>
+      <td class="bigbold">-14</td>
+      <td>Scottie Scheffler -10
+-1 thru 3</td>
       <td>Shane Lowry -3
 -1 thru 3</td>
       <td>Justin Thomas(W) -2
@@ -189,9 +189,9 @@ E thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">-9</td>
-      <td>Scottie Scheffler(W) -9
-E thru 2</td>
+      <td class="bigbold">-10</td>
+      <td>Scottie Scheffler(W) -10
+-1 thru 3</td>
       <td>Shane Lowry -3
 -1 thru 3</td>
       <td>Will Zalatoris +1
