--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 3:31:05 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 3:31:48 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -183,7 +183,7 @@ Missed Cut</td>
       <td>Tommy Fleetwood(W) +1
 E thru 7</td>
       <td class="greyout leftborder">Viktor Hovland +3
-E thru 9</td>
+E thru 10</td>
       <td class="greyout">Joaquin Niemann +5
 +1 thru 16</td>
     </tr>
@@ -213,7 +213,7 @@ Missed Cut</td>
       <td>Justin Thomas -2
 -1 thru 5</td>
       <td>Viktor Hovland +3
-E thru 9</td>
+E thru 10</td>
       <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -236,22 +236,6 @@ Missed Cut</td>
 +8 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">-2</td>
-      <td>Sungjae Im -4
-E thru 3</td>
-      <td>Justin Thomas -2
--1 thru 5</td>
-      <td>Collin Morikawa +1
-E thru 7</td>
-      <td>Viktor Hovland(W) +3
-E thru 9</td>
-      <td class="greyout leftborder">Patrick Cantlay +7
--1 (F)</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">John Nixon</td>
       <td class="bigbold">-2</td>
       <td>Cameron Smith(W) -8
@@ -265,6 +249,22 @@ E thru 7</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Scott Williamson</td>
+      <td class="bigbold">-1</td>
+      <td>Sungjae Im -3
++1 thru 4</td>
+      <td>Justin Thomas -2
+-1 thru 5</td>
+      <td>Collin Morikawa +1
+E thru 7</td>
+      <td>Viktor Hovland(W) +3
+E thru 10</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
+-1 (F)</td>
+      <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
@@ -321,7 +321,7 @@ Missed Cut</td>
       <td>Collin Morikawa +1
 E thru 7</td>
       <td>Viktor Hovland(W) +3
-E thru 9</td>
+E thru 10</td>
       <td>Jon Rahm +4
 -3 (F)</td>
       <td>Patrick Reed +7
@@ -337,7 +337,7 @@ Missed Cut</td>
       <td>Dustin Johnson E
 -1 thru 8</td>
       <td>Viktor Hovland +3
-E thru 9</td>
+E thru 10</td>
       <td>Jon Rahm +4
 -3 (F)</td>
       <td>Patrick Cantlay +7
