--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 3:31:48 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 3:32:31 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -172,22 +172,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Team Steve</td>
-      <td class="bigbold">-18</td>
-      <td>Scottie Scheffler -10
--1 thru 3</td>
-      <td>Cameron Smith(W) -8
--2 thru 2</td>
-      <td>Shane Lowry -3
--1 thru 3</td>
-      <td>Viktor Hovland +3
-E thru 10</td>
-      <td class="greyout leftborder">Patrick Cantlay +7
--1 (F)</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Walk 2</td>
       <td class="bigbold">-17</td>
       <td>Scottie Scheffler -10
@@ -201,22 +185,6 @@ E thru 10</td>
       <td class="greyout leftborder">Tyrrell Hatton +17
 +8 (F)</td>
       <td class="greyout">Sam Burns
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Stan and Ollie Garch</td>
-      <td class="bigbold">-17</td>
-      <td>Scottie Scheffler -10
--1 thru 3</td>
-      <td>Shane Lowry -3
--1 thru 3</td>
-      <td>Justin Thomas(W) -2
--1 thru 5</td>
-      <td>Corey Conners -2
--1 thru 6</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -252,30 +220,30 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-14</td>
+      <td class="bigbold">Team Steve</td>
+      <td class="bigbold">-15</td>
       <td>Scottie Scheffler -10
 -1 thru 3</td>
-      <td>Shane Lowry -3
--1 thru 3</td>
-      <td>Justin Thomas(W) -2
--1 thru 5</td>
-      <td>Will Zalatoris +1
--1 thru 9</td>
-      <td class="greyout leftborder">Tony Finau +6
-+2 thru 14</td>
-      <td class="greyout">Patrick Cantlay +7
+      <td>Cameron Smith(W) -8
+-2 thru 2</td>
+      <td>Shane Lowry E
++2 thru 4</td>
+      <td>Viktor Hovland +3
+E thru 10</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
 -1 (F)</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey B</td>
-      <td class="bigbold">-13</td>
+      <td class="bigbold">-14</td>
       <td>Scottie Scheffler(W) -10
 -1 thru 3</td>
+      <td>Rory McIlroy -3
+-4 thru 8</td>
       <td>Corey Conners -2
 -1 thru 6</td>
-      <td>Rory McIlroy -2
--3 thru 7</td>
       <td>Robert MacIntyre +3
 -3 (F)</td>
       <td class="greyout leftborder">Jon Rahm +4
@@ -284,46 +252,30 @@ Missed Cut</td>
 -1 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Tom Davis</td>
-      <td class="bigbold">-13</td>
-      <td>Cameron Smith -8
--2 thru 2</td>
-      <td>Shane Lowry -3
--1 thru 3</td>
-      <td>Corey Conners -2
--1 thru 6</td>
-      <td>Dustin Johnson(W) E
--1 thru 8</td>
-      <td class="greyout leftborder">Patrick Cantlay +7
--1 (F)</td>
-      <td class="greyout">Louis Oosthuizen
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-12</td>
-      <td>Cameron Smith -8
--2 thru 2</td>
-      <td>Shane Lowry -3
--1 thru 3</td>
-      <td>Justin Thomas(W) -2
--1 thru 5</td>
-      <td>Will Zalatoris +1
--1 thru 9</td>
-      <td class="greyout leftborder">Matthew Fitzpatrick +3
--1 thru 15</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Santorini Sunsets</td>
-      <td class="bigbold">-11</td>
+      <td class="bigbold">Stan and Ollie Garch</td>
+      <td class="bigbold">-14</td>
       <td>Scottie Scheffler -10
 -1 thru 3</td>
       <td>Justin Thomas(W) -2
 -1 thru 5</td>
-      <td>Rory McIlroy -2
--3 thru 7</td>
+      <td>Corey Conners -2
+-1 thru 6</td>
+      <td>Shane Lowry E
++2 thru 4</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Santorini Sunsets</td>
+      <td class="bigbold">-12</td>
+      <td>Scottie Scheffler -10
+-1 thru 3</td>
+      <td>Rory McIlroy -3
+-4 thru 8</td>
+      <td>Justin Thomas(W) -2
+-1 thru 5</td>
       <td>Viktor Hovland +3
 E thru 10</td>
       <td class="greyout leftborder">Patrick Cantlay +7
@@ -332,35 +284,51 @@ E thru 10</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">The Resort</td>
-      <td class="bigbold">-10</td>
-      <td>Cameron Smith(W) -8
--2 thru 2</td>
-      <td>Shane Lowry -3
--1 thru 3</td>
-      <td>Corey Conners -2
--1 thru 6</td>
-      <td>Viktor Hovland +3
-E thru 10</td>
-      <td class="greyout leftborder">Hideki Matsuyama +3
-+1 thru 10</td>
-      <td class="greyout">Jon Rahm +4
--3 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Baggy Pants</td>
-      <td class="bigbold">-10</td>
-      <td>Cameron Smith -8
--2 thru 2</td>
-      <td>Shane Lowry -3
+      <td class="bigbold">Jon Hosegood</td>
+      <td class="bigbold">-11</td>
+      <td>Scottie Scheffler -10
 -1 thru 3</td>
       <td>Justin Thomas(W) -2
 -1 thru 5</td>
-      <td>Viktor Hovland +3
-E thru 10</td>
+      <td>Shane Lowry E
++2 thru 4</td>
+      <td>Will Zalatoris +1
+-1 thru 9</td>
+      <td class="greyout leftborder">Tony Finau +6
++2 thru 14</td>
+      <td class="greyout">Patrick Cantlay +7
+-1 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Tom Davis</td>
+      <td class="bigbold">-10</td>
+      <td>Cameron Smith -8
+-2 thru 2</td>
+      <td>Corey Conners -2
+-1 thru 6</td>
+      <td>Dustin Johnson(W) E
+-1 thru 8</td>
+      <td>Shane Lowry E
++2 thru 4</td>
       <td class="greyout leftborder">Patrick Cantlay +7
 -1 (F)</td>
-      <td class="greyout">Brooks Koepka
+      <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jack Fleck</td>
+      <td class="bigbold">-10</td>
+      <td>Cameron Smith -8
+-2 thru 2</td>
+      <td>Rory McIlroy(W) -3
+-4 thru 8</td>
+      <td>Justin Thomas -2
+-1 thru 5</td>
+      <td>Hideki Matsuyama +3
++1 thru 10</td>
+      <td class="greyout leftborder">Tiger Woods +13
++6 (F)</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -412,19 +380,19 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Jack Fleck</td>
+      <td class="bigbold">Andrew Winchester</td>
       <td class="bigbold">-9</td>
       <td>Cameron Smith -8
 -2 thru 2</td>
-      <td>Rory McIlroy(W) -2
--3 thru 7</td>
-      <td>Justin Thomas -2
+      <td>Justin Thomas(W) -2
 -1 thru 5</td>
-      <td>Hideki Matsuyama +3
-+1 thru 10</td>
-      <td class="greyout leftborder">Tiger Woods +13
-+6 (F)</td>
-      <td class="greyout">Xander Schauffele
+      <td>Shane Lowry E
++2 thru 4</td>
+      <td>Will Zalatoris +1
+-1 thru 9</td>
+      <td class="greyout leftborder">Matthew Fitzpatrick +3
+-1 thru 15</td>
+      <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
@@ -460,6 +428,38 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">The Resort</td>
+      <td class="bigbold">-7</td>
+      <td>Cameron Smith(W) -8
+-2 thru 2</td>
+      <td>Corey Conners -2
+-1 thru 6</td>
+      <td>Shane Lowry E
++2 thru 4</td>
+      <td>Viktor Hovland +3
+E thru 10</td>
+      <td class="greyout leftborder">Hideki Matsuyama +3
++1 thru 10</td>
+      <td class="greyout">Jon Rahm +4
+-3 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Baggy Pants</td>
+      <td class="bigbold">-7</td>
+      <td>Cameron Smith -8
+-2 thru 2</td>
+      <td>Justin Thomas(W) -2
+-1 thru 5</td>
+      <td>Shane Lowry E
++2 thru 4</td>
+      <td>Viktor Hovland +3
+E thru 10</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
+-1 (F)</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Hadrian&#39;s Wall</td>
       <td class="bigbold">-6</td>
       <td>Cameron Smith -8
@@ -474,6 +474,38 @@ E thru 10</td>
 -3 (F)</td>
       <td class="greyout">Patrick Cantlay +7
 -1 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jabby</td>
+      <td class="bigbold">-6</td>
+      <td>Rory McIlroy -3
+-4 thru 8</td>
+      <td>Justin Thomas(W) -2
+-1 thru 5</td>
+      <td>Corey Conners -2
+-1 thru 6</td>
+      <td>Will Zalatoris +1
+-1 thru 9</td>
+      <td class="greyout leftborder">Jon Rahm +4
+-3 (F)</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Fred Jamieson</td>
+      <td class="bigbold">-6</td>
+      <td>Scottie Scheffler -10
+-1 thru 3</td>
+      <td>Rory McIlroy -3
+-4 thru 8</td>
+      <td>Viktor Hovland +3
+E thru 10</td>
+      <td>Jon Rahm(W) +4
+-3 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Ron Harrington</td>
@@ -540,44 +572,12 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Jabby</td>
-      <td class="bigbold">-5</td>
-      <td>Justin Thomas(W) -2
--1 thru 5</td>
-      <td>Corey Conners -2
--1 thru 6</td>
-      <td>Rory McIlroy -2
--3 thru 7</td>
-      <td>Will Zalatoris +1
--1 thru 9</td>
-      <td class="greyout leftborder">Jon Rahm +4
--3 (F)</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Fred Jamieson</td>
-      <td class="bigbold">-5</td>
-      <td>Scottie Scheffler -10
--1 thru 3</td>
-      <td>Rory McIlroy -2
--3 thru 7</td>
-      <td>Viktor Hovland +3
-E thru 10</td>
-      <td>Jon Rahm(W) +4
--3 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Glitter Girl</td>
-      <td class="bigbold">-3</td>
+      <td class="bigbold">-4</td>
       <td>Cameron Smith -8
 -2 thru 2</td>
-      <td>Rory McIlroy -2
--3 thru 7</td>
+      <td>Rory McIlroy -3
+-4 thru 8</td>
       <td>Viktor Hovland +3
 E thru 10</td>
       <td>Jon Rahm(W) +4
@@ -586,6 +586,38 @@ E thru 10</td>
 -1 (F)</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Brian McDonald</td>
+      <td class="bigbold">-3</td>
+      <td>Rory McIlroy -3
+-4 thru 8</td>
+      <td>Corey Conners -2
+-1 thru 6</td>
+      <td>Justin Thomas -2
+-1 thru 5</td>
+      <td>Jon Rahm(W) +4
+-3 (F)</td>
+      <td class="greyout leftborder">Xander Schauffele
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Ez Game Ez Life</td>
+      <td class="bigbold">-3</td>
+      <td>Rory McIlroy -3
+-4 thru 8</td>
+      <td>Justin Thomas -2
+-1 thru 5</td>
+      <td>Collin Morikawa +1
+E thru 7</td>
+      <td>Will Zalatoris +1
+-1 thru 9</td>
+      <td class="greyout leftborder">Viktor Hovland +3
+E thru 10</td>
+      <td class="greyout">Tiger Woods(W) +13
++6 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">New Lu</td>
@@ -604,42 +636,10 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Brian McDonald</td>
-      <td class="bigbold">-2</td>
-      <td>Corey Conners -2
--1 thru 6</td>
-      <td>Rory McIlroy -2
--3 thru 7</td>
-      <td>Justin Thomas -2
--1 thru 5</td>
-      <td>Jon Rahm(W) +4
--3 (F)</td>
-      <td class="greyout leftborder">Xander Schauffele
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Ez Game Ez Life</td>
-      <td class="bigbold">-2</td>
-      <td>Rory McIlroy -2
--3 thru 7</td>
-      <td>Justin Thomas -2
--1 thru 5</td>
-      <td>Collin Morikawa +1
-E thru 7</td>
-      <td>Will Zalatoris +1
--1 thru 9</td>
-      <td class="greyout leftborder">Viktor Hovland +3
-E thru 10</td>
-      <td class="greyout">Tiger Woods(W) +13
-+6 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Downhill Down Wind</td>
-      <td class="bigbold">0</td>
-      <td>Rory McIlroy -2
--3 thru 7</td>
+      <td class="bigbold">-1</td>
+      <td>Rory McIlroy -3
+-4 thru 8</td>
       <td>Justin Thomas -2
 -1 thru 5</td>
       <td>Collin Morikawa(W) +1
@@ -653,11 +653,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Grace</td>
-      <td class="bigbold">0</td>
+      <td class="bigbold">-1</td>
+      <td>Rory McIlroy -3
+-4 thru 8</td>
       <td>Corey Conners -2
 -1 thru 6</td>
-      <td>Rory McIlroy -2
--3 thru 7</td>
       <td>Collin Morikawa +1
 E thru 7</td>
       <td>Will Zalatoris +1
@@ -668,26 +668,10 @@ E thru 10</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Low Golf IQ</td>
-      <td class="bigbold">3</td>
-      <td>Shane Lowry(W) -3
--1 thru 3</td>
-      <td>Corey Conners -2
--1 thru 6</td>
-      <td>Viktor Hovland +3
-E thru 10</td>
-      <td>Joaquin Niemann +5
-+1 thru 16</td>
-      <td class="greyout leftborder">Sam Burns
-Missed Cut</td>
-      <td class="greyout">Brian Harman
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Lorette Hosegood</td>
-      <td class="bigbold">5</td>
-      <td>Rory McIlroy(W) -2
--3 thru 7</td>
+      <td class="bigbold">4</td>
+      <td>Rory McIlroy(W) -3
+-4 thru 8</td>
       <td>Dustin Johnson E
 -1 thru 8</td>
       <td>Viktor Hovland +3
@@ -748,19 +732,35 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Wild Billy Mitchell</td>
+      <td class="bigbold">Hasbulla</td>
       <td class="bigbold">6</td>
-      <td>Shane Lowry -3
--1 thru 3</td>
-      <td>Dustin Johnson(W) E
--1 thru 8</td>
-      <td>Matthew Fitzpatrick +3
--1 thru 15</td>
-      <td>Tony Finau +6
-+2 thru 14</td>
-      <td class="greyout leftborder">Louis Oosthuizen
+      <td>Rory McIlroy -3
+-4 thru 8</td>
+      <td>Justin Thomas -2
+-1 thru 5</td>
+      <td>Jon Rahm +4
+-3 (F)</td>
+      <td>Patrick Cantlay(W) +7
+-1 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
-      <td class="greyout">Jordan Spieth
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Low Golf IQ</td>
+      <td class="bigbold">6</td>
+      <td>Corey Conners -2
+-1 thru 6</td>
+      <td>Shane Lowry(W) E
++2 thru 4</td>
+      <td>Viktor Hovland +3
+E thru 10</td>
+      <td>Joaquin Niemann +5
++1 thru 16</td>
+      <td class="greyout leftborder">Sam Burns
+Missed Cut</td>
+      <td class="greyout">Brian Harman
 Missed Cut</td>
     </tr>
     <tr>
@@ -780,22 +780,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Hasbulla</td>
-      <td class="bigbold">7</td>
-      <td>Rory McIlroy -2
--3 thru 7</td>
-      <td>Justin Thomas -2
--1 thru 5</td>
-      <td>Jon Rahm +4
--3 (F)</td>
-      <td>Patrick Cantlay(W) +7
--1 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Walk 1</td>
       <td class="bigbold">9</td>
       <td>Collin Morikawa +1
@@ -809,6 +793,22 @@ E thru 10</td>
       <td class="greyout leftborder">Patrick Cantlay +7
 -1 (F)</td>
       <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Wild Billy Mitchell</td>
+      <td class="bigbold">9</td>
+      <td>Dustin Johnson(W) E
+-1 thru 8</td>
+      <td>Shane Lowry E
++2 thru 4</td>
+      <td>Matthew Fitzpatrick +3
+-1 thru 15</td>
+      <td>Tony Finau +6
++2 thru 14</td>
+      <td class="greyout leftborder">Louis Oosthuizen
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -885,7 +885,7 @@ E thru 10</td>
       <td>Jon Rahm +4
 -3 (F)</td>
       <td>Patrick Reed +7
-+3 thru 13</td>
++3 thru 14</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -1031,8 +1031,8 @@ Missed Cut</td>
       <td class="bigbold greyout">Benjac</td>
       <td class="bigbold greyout">-</td>
       <td class="greyout">Cameron Smith</td>
-      <td class="greyout">Justin Thomas(W)</td>
       <td class="greyout">Rory McIlroy</td>
+      <td class="greyout">Justin Thomas(W)</td>
       <td class="greyout">Sam Burns
 Missed Cut</td>
       <td class="greyout leftborder">Justin Rose
