--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 3:31:48 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 3:32:31 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -140,14 +140,30 @@ body {
   </thead>
   <tbody>
     <tr>
+      <td class="bigbold">Paxton Watson</td>
+      <td class="bigbold">-12</td>
+      <td>Cameron Smith -8
+-2 thru 2</td>
+      <td>Rory McIlroy -3
+-4 thru 8</td>
+      <td>Justin Thomas -2
+-1 thru 5</td>
+      <td>Tommy Fleetwood(W) +1
+E thru 7</td>
+      <td class="greyout leftborder">Viktor Hovland +3
+E thru 10</td>
+      <td class="greyout">Joaquin Niemann +5
++1 thru 16</td>
+    </tr>
+    <tr>
       <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-14</td>
+      <td class="bigbold">-11</td>
       <td>Scottie Scheffler -10
--1 thru 3</td>
-      <td>Shane Lowry -3
 -1 thru 3</td>
       <td>Justin Thomas(W) -2
 -1 thru 5</td>
+      <td>Shane Lowry E
++2 thru 4</td>
       <td>Will Zalatoris +1
 -1 thru 9</td>
       <td class="greyout leftborder">Tony Finau +6
@@ -157,50 +173,18 @@ body {
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-12</td>
+      <td class="bigbold">-9</td>
       <td>Cameron Smith -8
 -2 thru 2</td>
-      <td>Shane Lowry -3
--1 thru 3</td>
       <td>Justin Thomas(W) -2
 -1 thru 5</td>
+      <td>Shane Lowry E
++2 thru 4</td>
       <td>Will Zalatoris +1
 -1 thru 9</td>
       <td class="greyout leftborder">Matthew Fitzpatrick +3
 -1 thru 15</td>
       <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-11</td>
-      <td>Cameron Smith -8
--2 thru 2</td>
-      <td>Justin Thomas -2
--1 thru 5</td>
-      <td>Rory McIlroy -2
--3 thru 7</td>
-      <td>Tommy Fleetwood(W) +1
-E thru 7</td>
-      <td class="greyout leftborder">Viktor Hovland +3
-E thru 10</td>
-      <td class="greyout">Joaquin Niemann +5
-+1 thru 16</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">-10</td>
-      <td>Scottie Scheffler(W) -10
--1 thru 3</td>
-      <td>Shane Lowry -3
--1 thru 3</td>
-      <td>Will Zalatoris +1
--1 thru 9</td>
-      <td>Jon Rahm +4
--3 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -220,28 +204,28 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Derrick Shea</td>
-      <td class="bigbold">-3</td>
-      <td>Shane Lowry -3
+      <td class="bigbold">Chris Bryson</td>
+      <td class="bigbold">-7</td>
+      <td>Scottie Scheffler(W) -10
 -1 thru 3</td>
-      <td>Justin Thomas(W) -2
--1 thru 5</td>
-      <td>Corey Conners -2
--1 thru 6</td>
+      <td>Shane Lowry E
++2 thru 4</td>
+      <td>Will Zalatoris +1
+-1 thru 9</td>
       <td>Jon Rahm +4
 -3 (F)</td>
-      <td class="greyout leftborder">Patrick Cantlay +7
--1 (F)</td>
-      <td class="greyout">Tyrrell Hatton +17
-+8 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">John Nixon</td>
-      <td class="bigbold">-2</td>
+      <td class="bigbold">-3</td>
       <td>Cameron Smith(W) -8
 -2 thru 2</td>
-      <td>Rory McIlroy -2
--3 thru 7</td>
+      <td>Rory McIlroy -3
+-4 thru 8</td>
       <td>Collin Morikawa +1
 E thru 7</td>
       <td>Patrick Cantlay +7
@@ -266,6 +250,22 @@ E thru 10</td>
 -1 (F)</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Derrick Shea</td>
+      <td class="bigbold">0</td>
+      <td>Justin Thomas(W) -2
+-1 thru 5</td>
+      <td>Corey Conners -2
+-1 thru 6</td>
+      <td>Shane Lowry E
++2 thru 4</td>
+      <td>Jon Rahm +4
+-3 (F)</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
+-1 (F)</td>
+      <td class="greyout">Tyrrell Hatton +17
++8 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
@@ -325,7 +325,7 @@ E thru 10</td>
       <td>Jon Rahm +4
 -3 (F)</td>
       <td>Patrick Reed +7
-+3 thru 13</td>
++3 thru 14</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Luke List
