--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 3:35:23 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 3:36:06 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -300,6 +300,22 @@ Missed Cut</td>
 -1 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Tom Davis</td>
+      <td class="bigbold">-10</td>
+      <td>Cameron Smith -7
+-1 thru 3</td>
+      <td>Corey Conners -2
+-1 thru 6</td>
+      <td>Dustin Johnson(W) -1
+-2 thru 9</td>
+      <td>Shane Lowry E
++2 thru 4</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
+-1 (F)</td>
+      <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Matt Wilson</td>
       <td class="bigbold">-9</td>
       <td>Scottie Scheffler(W) -10
@@ -313,22 +329,6 @@ Missed Cut</td>
       <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Tom Davis</td>
-      <td class="bigbold">-9</td>
-      <td>Cameron Smith -7
--1 thru 3</td>
-      <td>Corey Conners -2
--1 thru 6</td>
-      <td>Dustin Johnson(W) E
--1 thru 8</td>
-      <td>Shane Lowry E
-+2 thru 4</td>
-      <td class="greyout leftborder">Patrick Cantlay +7
--1 (F)</td>
-      <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
     </tr>
     <tr>
@@ -669,11 +669,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Lorette Hosegood</td>
-      <td class="bigbold">4</td>
+      <td class="bigbold">3</td>
       <td>Rory McIlroy(W) -3
 -4 thru 8</td>
-      <td>Dustin Johnson E
--1 thru 8</td>
+      <td>Dustin Johnson -1
+-2 thru 9</td>
       <td>Viktor Hovland +3
 E thru 10</td>
       <td>Jon Rahm +4
@@ -757,10 +757,26 @@ Missed Cut</td>
       <td>Viktor Hovland +3
 E thru 10</td>
       <td>Joaquin Niemann +5
-+1 thru 16</td>
++1 thru 17</td>
       <td class="greyout leftborder">Sam Burns
 Missed Cut</td>
       <td class="greyout">Brian Harman
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Wild Billy Mitchell</td>
+      <td class="bigbold">7</td>
+      <td>Dustin Johnson(W) -1
+-2 thru 9</td>
+      <td>Shane Lowry E
++2 thru 4</td>
+      <td>Matthew Fitzpatrick +3
+-1 thru 16</td>
+      <td>Tony Finau +5
++1 thru 15</td>
+      <td class="greyout leftborder">Louis Oosthuizen
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -796,19 +812,19 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Wild Billy Mitchell</td>
-      <td class="bigbold">8</td>
-      <td>Dustin Johnson(W) E
--1 thru 8</td>
-      <td>Shane Lowry E
-+2 thru 4</td>
-      <td>Matthew Fitzpatrick +3
--1 thru 16</td>
-      <td>Tony Finau +5
-+1 thru 15</td>
-      <td class="greyout leftborder">Louis Oosthuizen
+      <td class="bigbold">CRED</td>
+      <td class="bigbold">12</td>
+      <td>Scottie Scheffler -10
+-1 thru 3</td>
+      <td>Dustin Johnson -1
+-2 thru 9</td>
+      <td>Patrick Cantlay +7
+-1 (F)</td>
+      <td>Adam Scott +14
++2 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka(W)
 Missed Cut</td>
-      <td class="greyout">Jordan Spieth
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -841,22 +857,6 @@ Missed Cut</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">CRED</td>
-      <td class="bigbold">13</td>
-      <td>Scottie Scheffler -10
--1 thru 3</td>
-      <td>Dustin Johnson E
--1 thru 8</td>
-      <td>Patrick Cantlay +7
--1 (F)</td>
-      <td>Adam Scott +14
-+2 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka(W)
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -893,9 +893,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">16</td>
-      <td>Dustin Johnson E
--1 thru 8</td>
+      <td class="bigbold">15</td>
+      <td>Dustin Johnson -1
+-2 thru 9</td>
       <td>Viktor Hovland +3
 E thru 10</td>
       <td>Jon Rahm +4
