--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 3:35:23 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 3:36:06 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -169,7 +169,7 @@ E thru 7</td>
       <td class="greyout leftborder">Viktor Hovland +3
 E thru 10</td>
       <td class="greyout">Joaquin Niemann +5
-+1 thru 16</td>
++1 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
@@ -269,13 +269,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
-      <td class="bigbold">3</td>
+      <td class="bigbold">2</td>
       <td>Justin Thomas -2
 -1 thru 5</td>
       <td>Corey Conners -2
 -1 thru 6</td>
-      <td>Dustin Johnson E
--1 thru 8</td>
+      <td>Dustin Johnson -1
+-2 thru 9</td>
       <td>Russell Henley +5
 -2 (F)</td>
       <td class="greyout leftborder">Xander Schauffele(W)
@@ -332,6 +332,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Matt Tummon</td>
+      <td class="bigbold">15</td>
+      <td>Dustin Johnson -1
+-2 thru 9</td>
+      <td>Viktor Hovland +3
+E thru 10</td>
+      <td>Jon Rahm +4
+-3 (F)</td>
+      <td>Patrick Cantlay +7
+-1 (F)</td>
+      <td class="greyout leftborder">Jordan Spieth(W)
+Missed Cut</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Shane Tummon</td>
       <td class="bigbold">16</td>
       <td>Collin Morikawa E
@@ -343,22 +359,6 @@ Missed Cut</td>
       <td>Patrick Cantlay +7
 -1 (F)</td>
       <td class="greyout leftborder">Jordan Spieth
-Missed Cut</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">16</td>
-      <td>Dustin Johnson E
--1 thru 8</td>
-      <td>Viktor Hovland +3
-E thru 10</td>
-      <td>Jon Rahm +4
--3 (F)</td>
-      <td>Patrick Cantlay +7
--1 (F)</td>
-      <td class="greyout leftborder">Jordan Spieth(W)
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
