--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 3:38:15 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 3:38:58 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -145,7 +145,7 @@ body {
       <td>Scottie Scheffler -10
 -1 thru 3</td>
       <td>Justin Thomas(W) -2
--1 thru 5</td>
+-1 thru 6</td>
       <td>Will Zalatoris E
 -2 thru 10</td>
       <td>Shane Lowry E
@@ -163,7 +163,7 @@ body {
       <td>Rory McIlroy -3
 -4 thru 8</td>
       <td>Justin Thomas -2
--1 thru 5</td>
+-1 thru 6</td>
       <td>Tommy Fleetwood(W) +1
 E thru 7</td>
       <td class="greyout leftborder">Viktor Hovland +3
@@ -177,7 +177,7 @@ E thru 10</td>
       <td>Cameron Smith -7
 -1 thru 3</td>
       <td>Justin Thomas(W) -2
--1 thru 5</td>
+-1 thru 6</td>
       <td>Shane Lowry E
 +2 thru 4</td>
       <td>Will Zalatoris E
@@ -205,13 +205,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-8</td>
+      <td class="bigbold">-7</td>
       <td>Cameron Smith(W) -7
 -1 thru 3</td>
-      <td>Corey Conners -2
--1 thru 6</td>
       <td>Justin Thomas -2
--1 thru 5</td>
+-1 thru 6</td>
+      <td>Corey Conners -1
+E thru 7</td>
       <td>Viktor Hovland +3
 E thru 10</td>
       <td class="greyout leftborder">Xander Schauffele
@@ -241,7 +241,7 @@ Missed Cut</td>
       <td>Sungjae Im -3
 +1 thru 4</td>
       <td>Justin Thomas -2
--1 thru 5</td>
+-1 thru 6</td>
       <td>Collin Morikawa E
 -1 thru 8</td>
       <td>Viktor Hovland(W) +3
@@ -253,11 +253,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Derrick Shea</td>
-      <td class="bigbold">0</td>
+      <td class="bigbold">1</td>
       <td>Justin Thomas(W) -2
--1 thru 5</td>
-      <td>Corey Conners -2
 -1 thru 6</td>
+      <td>Corey Conners -1
+E thru 7</td>
       <td>Shane Lowry E
 +2 thru 4</td>
       <td>Jon Rahm +4
@@ -269,13 +269,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
-      <td class="bigbold">2</td>
+      <td class="bigbold">3</td>
       <td>Justin Thomas -2
--1 thru 5</td>
-      <td>Corey Conners -2
 -1 thru 6</td>
       <td>Dustin Johnson -1
 -2 thru 9</td>
+      <td>Corey Conners -1
+E thru 7</td>
       <td>Russell Henley +5
 -2 (F)</td>
       <td class="greyout leftborder">Xander Schauffele(W)
@@ -287,7 +287,7 @@ Missed Cut</td>
       <td class="bigbold">Al Shulman</td>
       <td class="bigbold">3</td>
       <td>Justin Thomas(W) -2
--1 thru 5</td>
+-1 thru 6</td>
       <td>Collin Morikawa E
 -1 thru 8</td>
       <td>Will Zalatoris E
@@ -301,9 +301,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">5</td>
-      <td>Corey Conners(W) -2
--1 thru 6</td>
+      <td class="bigbold">6</td>
+      <td>Corey Conners(W) -1
+E thru 7</td>
       <td>Collin Morikawa E
 -1 thru 8</td>
       <td>Robert MacIntyre +3
