--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 3:43:16 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 3:43:59 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -143,7 +143,7 @@ body {
       <td class="bigbold">Jon Hosegood</td>
       <td class="bigbold">-12</td>
       <td>Scottie Scheffler -10
--1 thru 3</td>
+-1 thru 4</td>
       <td>Justin Thomas(W) -2
 -1 thru 6</td>
       <td>Will Zalatoris E
@@ -157,9 +157,9 @@ body {
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-11</td>
-      <td>Cameron Smith -7
--1 thru 3</td>
+      <td class="bigbold">-10</td>
+      <td>Cameron Smith -6
+E thru 4</td>
       <td>Rory McIlroy -3
 -4 thru 8</td>
       <td>Justin Thomas -2
@@ -172,26 +172,10 @@ E thru 10</td>
 +1 thru 17</td>
     </tr>
     <tr>
-      <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-9</td>
-      <td>Cameron Smith -7
--1 thru 3</td>
-      <td>Justin Thomas(W) -2
--1 thru 6</td>
-      <td>Shane Lowry E
-+2 thru 5</td>
-      <td>Will Zalatoris E
--2 thru 10</td>
-      <td class="greyout leftborder">Matthew Fitzpatrick +3
--1 thru 16</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Chris Bryson</td>
       <td class="bigbold">-8</td>
       <td>Scottie Scheffler(W) -10
--1 thru 3</td>
+-1 thru 4</td>
       <td>Will Zalatoris E
 -2 thru 10</td>
       <td>Shane Lowry E
@@ -204,10 +188,26 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Andrew Winchester</td>
+      <td class="bigbold">-8</td>
+      <td>Cameron Smith -6
+E thru 4</td>
+      <td>Justin Thomas(W) -2
+-1 thru 6</td>
+      <td>Shane Lowry E
++2 thru 5</td>
+      <td>Will Zalatoris E
+-2 thru 10</td>
+      <td class="greyout leftborder">Matthew Fitzpatrick +3
+-1 thru 16</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-7</td>
-      <td>Cameron Smith(W) -7
--1 thru 3</td>
+      <td class="bigbold">-6</td>
+      <td>Cameron Smith(W) -6
+E thru 4</td>
       <td>Justin Thomas -2
 -1 thru 6</td>
       <td>Corey Conners -1
@@ -217,22 +217,6 @@ E thru 10</td>
       <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">John Nixon</td>
-      <td class="bigbold">-3</td>
-      <td>Cameron Smith(W) -7
--1 thru 3</td>
-      <td>Rory McIlroy -3
--4 thru 8</td>
-      <td>Collin Morikawa E
--1 thru 8</td>
-      <td>Patrick Cantlay +7
--1 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -249,6 +233,22 @@ E thru 10</td>
       <td class="greyout leftborder">Patrick Cantlay +7
 -1 (F)</td>
       <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">John Nixon</td>
+      <td class="bigbold">-2</td>
+      <td>Cameron Smith(W) -6
+E thru 4</td>
+      <td>Rory McIlroy -3
+-4 thru 8</td>
+      <td>Collin Morikawa E
+-1 thru 8</td>
+      <td>Patrick Cantlay +7
+-1 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
