--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 3:44:42 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 3:45:25 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -412,6 +412,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Ez Game Ez Life</td>
+      <td class="bigbold">-6</td>
+      <td>Rory McIlroy -3
+-4 thru 8</td>
+      <td>Justin Thomas -2
+-1 thru 6</td>
+      <td>Collin Morikawa -1
+-2 thru 9</td>
+      <td>Will Zalatoris E
+-2 thru 10</td>
+      <td class="greyout leftborder">Viktor Hovland +3
+E thru 10</td>
+      <td class="greyout">Tiger Woods(W) +13
++6 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Bill Hunter</td>
       <td class="bigbold">-6</td>
       <td>Cameron Smith(W) -6
@@ -458,22 +474,6 @@ E thru 10</td>
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Ez Game Ez Life</td>
-      <td class="bigbold">-5</td>
-      <td>Rory McIlroy -3
--4 thru 8</td>
-      <td>Justin Thomas -2
--1 thru 6</td>
-      <td>Collin Morikawa E
--1 thru 8</td>
-      <td>Will Zalatoris E
--2 thru 10</td>
-      <td class="greyout leftborder">Viktor Hovland +3
-E thru 10</td>
-      <td class="greyout">Tiger Woods(W) +13
-+6 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Baggy Pants</td>
@@ -556,6 +556,38 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Downhill Down Wind</td>
+      <td class="bigbold">-3</td>
+      <td>Rory McIlroy -3
+-4 thru 8</td>
+      <td>Justin Thomas -2
+-1 thru 6</td>
+      <td>Collin Morikawa(W) -1
+-2 thru 9</td>
+      <td>Viktor Hovland +3
+E thru 10</td>
+      <td class="greyout leftborder">Tiger Woods +13
++6 (F)</td>
+      <td class="greyout">Gary Woodland
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Grace</td>
+      <td class="bigbold">-3</td>
+      <td>Rory McIlroy -3
+-4 thru 8</td>
+      <td>Corey Conners -1
+E thru 7</td>
+      <td>Collin Morikawa -1
+-2 thru 9</td>
+      <td>Will Zalatoris E
+-2 thru 10</td>
+      <td class="greyout leftborder">Viktor Hovland +3
+E thru 10</td>
+      <td class="greyout">Xander Schauffele(W)
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Uphill into the Wind</td>
       <td class="bigbold">-3</td>
       <td>Scottie Scheffler(W) -10
@@ -569,38 +601,6 @@ E thru 4</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Downhill Down Wind</td>
-      <td class="bigbold">-2</td>
-      <td>Rory McIlroy -3
--4 thru 8</td>
-      <td>Justin Thomas -2
--1 thru 6</td>
-      <td>Collin Morikawa(W) E
--1 thru 8</td>
-      <td>Viktor Hovland +3
-E thru 10</td>
-      <td class="greyout leftborder">Tiger Woods +13
-+6 (F)</td>
-      <td class="greyout">Gary Woodland
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Grace</td>
-      <td class="bigbold">-2</td>
-      <td>Rory McIlroy -3
--4 thru 8</td>
-      <td>Corey Conners -1
-E thru 7</td>
-      <td>Collin Morikawa E
--1 thru 8</td>
-      <td>Will Zalatoris E
--2 thru 10</td>
-      <td class="greyout leftborder">Viktor Hovland +3
-E thru 10</td>
-      <td class="greyout">Xander Schauffele(W)
 Missed Cut</td>
     </tr>
     <tr>
@@ -700,6 +700,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">5</td>
+      <td>Corey Conners(W) -1
+E thru 7</td>
+      <td>Collin Morikawa -1
+-2 thru 9</td>
+      <td>Robert MacIntyre +3
+-3 (F)</td>
+      <td>Jon Rahm +4
+-3 (F)</td>
+      <td class="greyout leftborder">Daniel Berger +15
++8 (F)</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Kash Ahmad</td>
       <td class="bigbold">5</td>
       <td>Justin Thomas -2
@@ -716,19 +732,19 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">Walk 1</td>
       <td class="bigbold">6</td>
-      <td>Corey Conners(W) -1
-E thru 7</td>
-      <td>Collin Morikawa E
--1 thru 8</td>
-      <td>Robert MacIntyre +3
--3 (F)</td>
+      <td>Collin Morikawa -1
+-2 thru 9</td>
+      <td>Will Zalatoris E
+-2 thru 10</td>
+      <td>Viktor Hovland(W) +3
+E thru 10</td>
       <td>Jon Rahm +4
 -3 (F)</td>
-      <td class="greyout leftborder">Daniel Berger +15
-+8 (F)</td>
-      <td class="greyout">Jordan Spieth
+      <td class="greyout leftborder">Patrick Cantlay +7
+-1 (F)</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -761,22 +777,6 @@ Missed Cut</td>
       <td class="greyout leftborder">Louis Oosthuizen
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Walk 1</td>
-      <td class="bigbold">7</td>
-      <td>Collin Morikawa E
--1 thru 8</td>
-      <td>Will Zalatoris E
--2 thru 10</td>
-      <td>Viktor Hovland(W) +3
-E thru 10</td>
-      <td>Jon Rahm +4
--3 (F)</td>
-      <td class="greyout leftborder">Patrick Cantlay +7
--1 (F)</td>
-      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -861,9 +861,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Hosegood</td>
-      <td class="bigbold">14</td>
-      <td>Collin Morikawa(W) E
--1 thru 8</td>
+      <td class="bigbold">13</td>
+      <td>Collin Morikawa(W) -1
+-2 thru 9</td>
       <td>Hideki Matsuyama +3
 +1 thru 11</td>
       <td>Jon Rahm +4
@@ -877,9 +877,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">14</td>
-      <td>Collin Morikawa E
--1 thru 8</td>
+      <td class="bigbold">13</td>
+      <td>Collin Morikawa -1
+-2 thru 9</td>
       <td>Viktor Hovland(W) +3
 E thru 10</td>
       <td>Jon Rahm +4
@@ -909,9 +909,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">16</td>
-      <td>Collin Morikawa E
--1 thru 8</td>
+      <td class="bigbold">15</td>
+      <td>Collin Morikawa -1
+-2 thru 9</td>
       <td>Jon Rahm(W) +4
 -3 (F)</td>
       <td>Tony Finau +5
