--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 3:44:42 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 3:45:25 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -221,13 +221,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">-2</td>
+      <td class="bigbold">-3</td>
       <td>Sungjae Im -3
 +1 thru 5</td>
       <td>Justin Thomas -2
 -1 thru 6</td>
-      <td>Collin Morikawa E
--1 thru 8</td>
+      <td>Collin Morikawa -1
+-2 thru 9</td>
       <td>Viktor Hovland(W) +3
 E thru 10</td>
       <td class="greyout leftborder">Patrick Cantlay +7
@@ -237,13 +237,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">John Nixon</td>
-      <td class="bigbold">-2</td>
+      <td class="bigbold">-3</td>
       <td>Cameron Smith(W) -6
 E thru 4</td>
       <td>Rory McIlroy -3
 -4 thru 8</td>
-      <td>Collin Morikawa E
--1 thru 8</td>
+      <td>Collin Morikawa -1
+-2 thru 9</td>
       <td>Patrick Cantlay +7
 -1 (F)</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -268,6 +268,22 @@ E thru 7</td>
 +8 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">2</td>
+      <td>Justin Thomas(W) -2
+-1 thru 6</td>
+      <td>Collin Morikawa -1
+-2 thru 9</td>
+      <td>Will Zalatoris E
+-2 thru 10</td>
+      <td>Tony Finau +5
++1 thru 16</td>
+      <td class="greyout leftborder">Daniel Berger +15
++8 (F)</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Jamie Watters</td>
       <td class="bigbold">3</td>
       <td>Justin Thomas -2
@@ -284,28 +300,12 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">3</td>
-      <td>Justin Thomas(W) -2
--1 thru 6</td>
-      <td>Collin Morikawa E
--1 thru 8</td>
-      <td>Will Zalatoris E
--2 thru 10</td>
-      <td>Tony Finau +5
-+1 thru 16</td>
-      <td class="greyout leftborder">Daniel Berger +15
-+8 (F)</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">6</td>
+      <td class="bigbold">5</td>
       <td>Corey Conners(W) -1
 E thru 7</td>
-      <td>Collin Morikawa E
--1 thru 8</td>
+      <td>Collin Morikawa -1
+-2 thru 9</td>
       <td>Robert MacIntyre +3
 -3 (F)</td>
       <td>Jon Rahm +4
@@ -317,9 +317,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">14</td>
-      <td>Collin Morikawa E
--1 thru 8</td>
+      <td class="bigbold">13</td>
+      <td>Collin Morikawa -1
+-2 thru 9</td>
       <td>Viktor Hovland(W) +3
 E thru 10</td>
       <td>Jon Rahm +4
@@ -329,6 +329,22 @@ E thru 10</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Luke List
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Shane Tummon</td>
+      <td class="bigbold">15</td>
+      <td>Collin Morikawa -1
+-2 thru 9</td>
+      <td>Jon Rahm(W) +4
+-3 (F)</td>
+      <td>Tony Finau +5
++1 thru 16</td>
+      <td>Patrick Cantlay +7
+-1 (F)</td>
+      <td class="greyout leftborder">Jordan Spieth
+Missed Cut</td>
+      <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
@@ -343,22 +359,6 @@ E thru 10</td>
       <td>Patrick Cantlay +7
 -1 (F)</td>
       <td class="greyout leftborder">Jordan Spieth(W)
-Missed Cut</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">16</td>
-      <td>Collin Morikawa E
--1 thru 8</td>
-      <td>Jon Rahm(W) +4
--3 (F)</td>
-      <td>Tony Finau +5
-+1 thru 16</td>
-      <td>Patrick Cantlay +7
--1 (F)</td>
-      <td class="greyout leftborder">Jordan Spieth
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
