--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 4:22:41 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 4:23:24 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,18 +141,50 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-20</td>
+      <td class="bigbold">-21</td>
       <td>Scottie Scheffler -11
 -2 thru 7</td>
       <td>Cameron Smith(W) -7
 -1 thru 7</td>
       <td>Corey Conners -2
 -1 thru 9</td>
-      <td>Will Zalatoris E
--2 thru 12</td>
+      <td>Will Zalatoris -1
+-3 thru 13</td>
       <td class="greyout leftborder">Russell Henley +5
 -2 (F)</td>
       <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Mark MacKave</td>
+      <td class="bigbold">-19</td>
+      <td>Scottie Scheffler -11
+-2 thru 7</td>
+      <td>Cameron Smith -7
+-1 thru 7</td>
+      <td>Corey Conners -2
+-1 thru 9</td>
+      <td>Will Zalatoris -1
+-3 thru 13</td>
+      <td class="greyout leftborder">Viktor Hovland +3
+E thru 13</td>
+      <td class="greyout">Xander Schauffele(W)
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Doug Muir</td>
+      <td class="bigbold">-18</td>
+      <td>Scottie Scheffler(W) -11
+-2 thru 7</td>
+      <td>Cameron Smith -7
+-1 thru 7</td>
+      <td>Will Zalatoris -1
+-3 thru 13</td>
+      <td>Hideki Matsuyama +3
++1 thru 13</td>
+      <td class="greyout leftborder">Xander Schauffele
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -172,22 +204,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Mark MacKave</td>
-      <td class="bigbold">-18</td>
-      <td>Scottie Scheffler -11
--2 thru 7</td>
-      <td>Cameron Smith -7
--1 thru 7</td>
-      <td>Corey Conners -2
--1 thru 9</td>
-      <td>Will Zalatoris E
--2 thru 12</td>
-      <td class="greyout leftborder">Viktor Hovland +3
-E thru 13</td>
-      <td class="greyout">Xander Schauffele(W)
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Walk 2</td>
       <td class="bigbold">-17</td>
       <td>Scottie Scheffler -11
@@ -201,22 +217,6 @@ E thru 13</td>
       <td class="greyout leftborder">Tyrrell Hatton +17
 +8 (F)</td>
       <td class="greyout">Sam Burns
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Doug Muir</td>
-      <td class="bigbold">-17</td>
-      <td>Scottie Scheffler(W) -11
--2 thru 7</td>
-      <td>Cameron Smith -7
--1 thru 7</td>
-      <td>Will Zalatoris E
--2 thru 12</td>
-      <td>Hideki Matsuyama +3
-+1 thru 13</td>
-      <td class="greyout leftborder">Xander Schauffele
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -234,6 +234,22 @@ Missed Cut</td>
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jon Hosegood</td>
+      <td class="bigbold">-16</td>
+      <td>Scottie Scheffler -11
+-2 thru 7</td>
+      <td>Justin Thomas(W) -3
+-2 thru 8</td>
+      <td>Shane Lowry -1
++1 thru 7</td>
+      <td>Will Zalatoris -1
+-3 thru 13</td>
+      <td class="greyout leftborder">Tony Finau +6
++2 (F)</td>
+      <td class="greyout">Patrick Cantlay +7
+-1 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Team Steve</td>
@@ -284,30 +300,14 @@ E thru 13</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-15</td>
-      <td>Scottie Scheffler -11
--2 thru 7</td>
-      <td>Justin Thomas(W) -3
--2 thru 8</td>
-      <td>Shane Lowry -1
-+1 thru 7</td>
-      <td>Will Zalatoris E
--2 thru 12</td>
-      <td class="greyout leftborder">Tony Finau +6
-+2 (F)</td>
-      <td class="greyout">Patrick Cantlay +7
--1 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Matt Wilson</td>
-      <td class="bigbold">-11</td>
+      <td class="bigbold">-12</td>
       <td>Scottie Scheffler(W) -11
 -2 thru 7</td>
       <td>Corey Conners -2
 -1 thru 9</td>
-      <td>Will Zalatoris E
--2 thru 12</td>
+      <td>Will Zalatoris -1
+-3 thru 13</td>
       <td>Jon Rahm +4
 -3 (F)</td>
       <td class="greyout leftborder">Xander Schauffele
@@ -317,15 +317,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-11</td>
+      <td class="bigbold">-12</td>
       <td>Cameron Smith -7
 -1 thru 7</td>
       <td>Justin Thomas(W) -3
 -2 thru 8</td>
       <td>Shane Lowry -1
 +1 thru 7</td>
-      <td>Will Zalatoris E
--2 thru 12</td>
+      <td>Will Zalatoris -1
+-3 thru 13</td>
       <td class="greyout leftborder">Matthew Fitzpatrick +2
 -2 (F)</td>
       <td class="greyout">Brooks Koepka
@@ -349,18 +349,34 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Albert Selina</td>
-      <td class="bigbold">-9</td>
+      <td class="bigbold">-10</td>
       <td>Scottie Scheffler -11
 -2 thru 7</td>
       <td>Corey Conners -2
 -1 thru 9</td>
-      <td>Will Zalatoris E
--2 thru 12</td>
+      <td>Will Zalatoris -1
+-3 thru 13</td>
       <td>Jon Rahm(W) +4
 -3 (F)</td>
       <td class="greyout leftborder">Webb Simpson +9
 +7 thru 13</td>
       <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jabby</td>
+      <td class="bigbold">-10</td>
+      <td>Rory McIlroy -4
+-5 thru 11</td>
+      <td>Justin Thomas(W) -3
+-2 thru 8</td>
+      <td>Corey Conners -2
+-1 thru 9</td>
+      <td>Will Zalatoris -1
+-3 thru 13</td>
+      <td class="greyout leftborder">Jon Rahm +4
+-3 (F)</td>
+      <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
@@ -396,22 +412,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Jabby</td>
-      <td class="bigbold">-9</td>
-      <td>Rory McIlroy -4
--5 thru 11</td>
-      <td>Justin Thomas(W) -3
--2 thru 8</td>
-      <td>Corey Conners -2
--1 thru 9</td>
-      <td>Will Zalatoris E
--2 thru 12</td>
-      <td class="greyout leftborder">Jon Rahm +4
--3 (F)</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">The Dub</td>
       <td class="bigbold">-9</td>
       <td>Scottie Scheffler -11
@@ -426,6 +426,22 @@ Missed Cut</td>
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Ez Game Ez Life</td>
+      <td class="bigbold">-8</td>
+      <td>Rory McIlroy -4
+-5 thru 11</td>
+      <td>Justin Thomas -3
+-2 thru 8</td>
+      <td>Will Zalatoris -1
+-3 thru 13</td>
+      <td>Collin Morikawa E
+-1 thru 11</td>
+      <td class="greyout leftborder">Viktor Hovland +3
+E thru 13</td>
+      <td class="greyout">Tiger Woods(W) +13
++6 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Fred Jamieson</td>
@@ -476,20 +492,20 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Ez Game Ez Life</td>
+      <td class="bigbold">Hadrian&#39;s Wall</td>
       <td class="bigbold">-7</td>
-      <td>Rory McIlroy -4
--5 thru 11</td>
-      <td>Justin Thomas -3
--2 thru 8</td>
-      <td>Collin Morikawa E
--1 thru 11</td>
-      <td>Will Zalatoris E
--2 thru 12</td>
-      <td class="greyout leftborder">Viktor Hovland +3
+      <td>Cameron Smith -7
+-1 thru 7</td>
+      <td>Corey Conners -2
+-1 thru 9</td>
+      <td>Will Zalatoris -1
+-3 thru 13</td>
+      <td>Viktor Hovland +3
 E thru 13</td>
-      <td class="greyout">Tiger Woods(W) +13
-+6 (F)</td>
+      <td class="greyout leftborder">Jon Rahm(W) +4
+-3 (F)</td>
+      <td class="greyout">Patrick Cantlay +7
+-1 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">The Resort</td>
@@ -508,20 +524,20 @@ E thru 13</td>
 -3 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Hadrian&#39;s Wall</td>
+      <td class="bigbold">Santorini Sunrises</td>
       <td class="bigbold">-6</td>
       <td>Cameron Smith -7
 -1 thru 7</td>
-      <td>Corey Conners -2
+      <td>Corey Conners(W) -2
 -1 thru 9</td>
-      <td>Will Zalatoris E
--2 thru 12</td>
-      <td>Viktor Hovland +3
-E thru 13</td>
-      <td class="greyout leftborder">Jon Rahm(W) +4
+      <td>Will Zalatoris -1
+-3 thru 13</td>
+      <td>Jon Rahm +4
 -3 (F)</td>
-      <td class="greyout">Patrick Cantlay +7
--1 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Lyle Rattray</td>
@@ -540,19 +556,19 @@ E thru 13</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Santorini Sunrises</td>
+      <td class="bigbold">Grace</td>
       <td class="bigbold">-5</td>
-      <td>Cameron Smith -7
--1 thru 7</td>
-      <td>Corey Conners(W) -2
+      <td>Rory McIlroy -4
+-5 thru 11</td>
+      <td>Corey Conners -2
 -1 thru 9</td>
-      <td>Will Zalatoris E
--2 thru 12</td>
-      <td>Jon Rahm +4
--3 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
+      <td>Will Zalatoris -1
+-3 thru 13</td>
+      <td>Collin Morikawa E
+-1 thru 11</td>
+      <td class="greyout leftborder">Viktor Hovland +3
+E thru 13</td>
+      <td class="greyout">Xander Schauffele(W)
 Missed Cut</td>
     </tr>
     <tr>
@@ -604,19 +620,19 @@ E thru 13</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Grace</td>
+      <td class="bigbold">New Lu</td>
       <td class="bigbold">-4</td>
-      <td>Rory McIlroy -4
--5 thru 11</td>
-      <td>Corey Conners -2
--1 thru 9</td>
-      <td>Collin Morikawa E
--1 thru 11</td>
-      <td>Will Zalatoris E
--2 thru 12</td>
-      <td class="greyout leftborder">Viktor Hovland +3
-E thru 13</td>
-      <td class="greyout">Xander Schauffele(W)
+      <td>Cameron Smith -7
+-1 thru 7</td>
+      <td>Justin Thomas(W) -3
+-2 thru 8</td>
+      <td>Will Zalatoris -1
+-3 thru 13</td>
+      <td>Patrick Cantlay +7
+-1 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -652,28 +668,12 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">New Lu</td>
-      <td class="bigbold">-3</td>
-      <td>Cameron Smith -7
--1 thru 7</td>
-      <td>Justin Thomas(W) -3
--2 thru 8</td>
-      <td>Will Zalatoris E
--2 thru 12</td>
-      <td>Patrick Cantlay +7
--1 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Glen Wilson</td>
-      <td class="bigbold">4</td>
+      <td class="bigbold">3</td>
       <td>Justin Thomas(W) -3
 -2 thru 8</td>
-      <td>Will Zalatoris E
--2 thru 12</td>
+      <td>Will Zalatoris -1
+-3 thru 13</td>
       <td>Viktor Hovland +3
 E thru 13</td>
       <td>Jon Rahm +4
@@ -685,11 +685,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Kash Ahmad</td>
-      <td class="bigbold">4</td>
+      <td class="bigbold">3</td>
       <td>Justin Thomas -3
 -2 thru 8</td>
-      <td>Will Zalatoris E
--2 thru 12</td>
+      <td>Will Zalatoris -1
+-3 thru 13</td>
       <td>Viktor Hovland +3
 E thru 13</td>
       <td>Jon Rahm(W) +4
@@ -748,6 +748,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Walk 1</td>
+      <td class="bigbold">6</td>
+      <td>Will Zalatoris -1
+-3 thru 13</td>
+      <td>Collin Morikawa E
+-1 thru 11</td>
+      <td>Viktor Hovland(W) +3
+E thru 13</td>
+      <td>Jon Rahm +4
+-3 (F)</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
+-1 (F)</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Low Golf IQ</td>
       <td class="bigbold">6</td>
       <td>Corey Conners -2
@@ -761,22 +777,6 @@ E thru 13</td>
       <td class="greyout leftborder">Sam Burns
 Missed Cut</td>
       <td class="greyout">Brian Harman
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Walk 1</td>
-      <td class="bigbold">7</td>
-      <td>Collin Morikawa E
--1 thru 11</td>
-      <td>Will Zalatoris E
--2 thru 12</td>
-      <td>Viktor Hovland(W) +3
-E thru 13</td>
-      <td>Jon Rahm +4
--3 (F)</td>
-      <td class="greyout leftborder">Patrick Cantlay +7
--1 (F)</td>
-      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
