--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 4:22:41 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 4:23:24 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,15 +141,15 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-15</td>
+      <td class="bigbold">-16</td>
       <td>Scottie Scheffler -11
 -2 thru 7</td>
       <td>Justin Thomas(W) -3
 -2 thru 8</td>
+      <td>Will Zalatoris -1
+-3 thru 13</td>
       <td>Shane Lowry -1
 +1 thru 7</td>
-      <td>Will Zalatoris E
--2 thru 12</td>
       <td class="greyout leftborder">Tony Finau +6
 +2 (F)</td>
       <td class="greyout">Patrick Cantlay +7
@@ -173,15 +173,15 @@ E thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-11</td>
+      <td class="bigbold">-12</td>
       <td>Cameron Smith -7
 -1 thru 7</td>
       <td>Justin Thomas(W) -3
 -2 thru 8</td>
       <td>Shane Lowry -1
 +1 thru 7</td>
-      <td>Will Zalatoris E
--2 thru 12</td>
+      <td>Will Zalatoris -1
+-3 thru 13</td>
       <td class="greyout leftborder">Matthew Fitzpatrick +2
 -2 (F)</td>
       <td class="greyout">Brooks Koepka
@@ -189,13 +189,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">-10</td>
+      <td class="bigbold">-11</td>
       <td>Scottie Scheffler(W) -11
 -2 thru 7</td>
+      <td>Will Zalatoris -1
+-3 thru 13</td>
       <td>Shane Lowry -1
 +1 thru 7</td>
-      <td>Will Zalatoris E
--2 thru 12</td>
       <td>Jon Rahm +4
 -3 (F)</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -223,7 +223,7 @@ Missed Cut</td>
       <td class="bigbold">Scott Williamson</td>
       <td class="bigbold">-4</td>
       <td>Sungjae Im -4
-E thru 7</td>
+E thru 8</td>
       <td>Justin Thomas -3
 -2 thru 8</td>
       <td>Collin Morikawa E
@@ -269,13 +269,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">3</td>
+      <td class="bigbold">2</td>
       <td>Justin Thomas(W) -3
 -2 thru 8</td>
+      <td>Will Zalatoris -1
+-3 thru 13</td>
       <td>Collin Morikawa E
 -1 thru 11</td>
-      <td>Will Zalatoris E
--2 thru 12</td>
       <td>Tony Finau +6
 +2 (F)</td>
       <td class="greyout leftborder">Daniel Berger +15
