--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 4:52:04 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 4:52:47 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,15 +141,15 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-17</td>
+      <td class="bigbold">-18</td>
       <td>Scottie Scheffler -11
--2 thru 8</td>
+-2 thru 9</td>
       <td>Shane Lowry -3
 -1 thru 10</td>
       <td>Justin Thomas(W) -2
 -1 thru 10</td>
-      <td>Will Zalatoris -1
--3 thru 14</td>
+      <td>Will Zalatoris -2
+-4 thru 15</td>
       <td class="greyout leftborder">Tony Finau +6
 +2 (F)</td>
       <td class="greyout">Patrick Cantlay +7
@@ -157,18 +157,34 @@ body {
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">-13</td>
+      <td class="bigbold">-14</td>
       <td>Scottie Scheffler(W) -11
--2 thru 8</td>
+-2 thru 9</td>
       <td>Shane Lowry -3
 -1 thru 10</td>
-      <td>Will Zalatoris -1
--3 thru 14</td>
+      <td>Will Zalatoris -2
+-4 thru 15</td>
       <td>Jon Rahm +4
 -3 (F)</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Andrew Winchester</td>
+      <td class="bigbold">-14</td>
+      <td>Cameron Smith -7
+-1 thru 8</td>
+      <td>Shane Lowry -3
+-1 thru 10</td>
+      <td>Justin Thomas(W) -2
+-1 thru 10</td>
+      <td>Will Zalatoris -2
+-4 thru 15</td>
+      <td class="greyout leftborder">Matthew Fitzpatrick +2
+-2 (F)</td>
+      <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
@@ -188,22 +204,6 @@ Missed Cut</td>
 +2 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-13</td>
-      <td>Cameron Smith -7
--1 thru 8</td>
-      <td>Shane Lowry -3
--1 thru 10</td>
-      <td>Justin Thomas(W) -2
--1 thru 10</td>
-      <td>Will Zalatoris -1
--3 thru 14</td>
-      <td class="greyout leftborder">Matthew Fitzpatrick +2
--2 (F)</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">John Nixon</td>
       <td class="bigbold">-8</td>
       <td>Cameron Smith(W) -7
@@ -221,13 +221,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-8</td>
+      <td class="bigbold">-7</td>
       <td>Cameron Smith(W) -7
 -1 thru 8</td>
       <td>Justin Thomas -2
 -1 thru 10</td>
-      <td>Corey Conners -1
-E thru 11</td>
+      <td>Corey Conners E
++1 thru 12</td>
       <td>Viktor Hovland +2
 -1 thru 15</td>
       <td class="greyout leftborder">Xander Schauffele
@@ -253,13 +253,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Derrick Shea</td>
-      <td class="bigbold">-2</td>
+      <td class="bigbold">-1</td>
       <td>Shane Lowry -3
 -1 thru 10</td>
       <td>Justin Thomas(W) -2
 -1 thru 10</td>
-      <td>Corey Conners -1
-E thru 11</td>
+      <td>Corey Conners E
++1 thru 12</td>
       <td>Jon Rahm +4
 -3 (F)</td>
       <td class="greyout leftborder">Patrick Cantlay +7
@@ -269,13 +269,13 @@ E thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">1</td>
+      <td class="bigbold">0</td>
       <td>Justin Thomas(W) -2
 -1 thru 10</td>
       <td>Collin Morikawa -2
 -3 thru 13</td>
-      <td>Will Zalatoris -1
--3 thru 14</td>
+      <td>Will Zalatoris -2
+-4 thru 15</td>
       <td>Tony Finau +6
 +2 (F)</td>
       <td class="greyout leftborder">Daniel Berger +15
@@ -285,11 +285,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">4</td>
+      <td class="bigbold">5</td>
       <td>Collin Morikawa -2
 -3 thru 13</td>
-      <td>Corey Conners(W) -1
-E thru 11</td>
+      <td>Corey Conners(W) E
++1 thru 12</td>
       <td>Robert MacIntyre +3
 -3 (F)</td>
       <td>Jon Rahm +4
@@ -301,11 +301,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
-      <td class="bigbold">5</td>
+      <td class="bigbold">6</td>
       <td>Justin Thomas -2
 -1 thru 10</td>
-      <td>Corey Conners -1
-E thru 11</td>
+      <td>Corey Conners E
++1 thru 12</td>
       <td>Dustin Johnson +1
 E thru 14</td>
       <td>Russell Henley +5
