--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 4:52:04 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 4:52:47 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -140,42 +140,42 @@ body {
   </thead>
   <tbody>
     <tr>
-      <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-20</td>
-      <td>Scottie Scheffler -11
--2 thru 8</td>
-      <td>Cameron Smith(W) -7
--1 thru 8</td>
-      <td>Corey Conners -1
-E thru 11</td>
-      <td>Will Zalatoris -1
--3 thru 14</td>
-      <td class="greyout leftborder">Russell Henley +5
--2 (F)</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Doug Muir</td>
-      <td class="bigbold">-19</td>
+      <td class="bigbold">-20</td>
       <td>Scottie Scheffler(W) -11
--2 thru 8</td>
+-2 thru 9</td>
       <td>Cameron Smith -7
 -1 thru 8</td>
-      <td>Will Zalatoris -1
--3 thru 14</td>
+      <td>Will Zalatoris -2
+-4 thru 15</td>
       <td>Hideki Matsuyama +2
-E thru 15</td>
+E thru 16</td>
       <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Paxton Watson</td>
+      <td class="bigbold">-20</td>
+      <td>Scottie Scheffler -11
+-2 thru 9</td>
+      <td>Cameron Smith(W) -7
+-1 thru 8</td>
+      <td>Will Zalatoris -2
+-4 thru 15</td>
+      <td>Corey Conners E
++1 thru 12</td>
+      <td class="greyout leftborder">Russell Henley +5
+-2 (F)</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Team Steve</td>
       <td class="bigbold">-19</td>
       <td>Scottie Scheffler -11
--2 thru 8</td>
+-2 thru 9</td>
       <td>Cameron Smith(W) -7
 -1 thru 8</td>
       <td>Shane Lowry -3
@@ -188,16 +188,32 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Jon Hosegood</td>
+      <td class="bigbold">-18</td>
+      <td>Scottie Scheffler -11
+-2 thru 9</td>
+      <td>Shane Lowry -3
+-1 thru 10</td>
+      <td>Justin Thomas(W) -2
+-1 thru 10</td>
+      <td>Will Zalatoris -2
+-4 thru 15</td>
+      <td class="greyout leftborder">Tony Finau +6
++2 (F)</td>
+      <td class="greyout">Patrick Cantlay +7
+-1 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Mark MacKave</td>
       <td class="bigbold">-18</td>
       <td>Scottie Scheffler -11
--2 thru 8</td>
+-2 thru 9</td>
       <td>Cameron Smith -7
 -1 thru 8</td>
-      <td>Corey Conners -1
-E thru 11</td>
-      <td>Will Zalatoris -1
--3 thru 14</td>
+      <td>Will Zalatoris -2
+-4 thru 15</td>
+      <td>Corey Conners E
++1 thru 12</td>
       <td class="greyout leftborder">Viktor Hovland +2
 -1 thru 15</td>
       <td class="greyout">Xander Schauffele(W)
@@ -207,7 +223,7 @@ Missed Cut</td>
       <td class="bigbold">Santorini Sunsets</td>
       <td class="bigbold">-17</td>
       <td>Scottie Scheffler -11
--2 thru 8</td>
+-2 thru 9</td>
       <td>Rory McIlroy -6
 -7 thru 13</td>
       <td>Justin Thomas(W) -2
@@ -220,30 +236,14 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-17</td>
-      <td>Scottie Scheffler -11
--2 thru 8</td>
-      <td>Shane Lowry -3
--1 thru 10</td>
-      <td>Justin Thomas(W) -2
--1 thru 10</td>
-      <td>Will Zalatoris -1
--3 thru 14</td>
-      <td class="greyout leftborder">Tony Finau +6
-+2 (F)</td>
-      <td class="greyout">Patrick Cantlay +7
--1 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Walk 2</td>
-      <td class="bigbold">-17</td>
+      <td class="bigbold">-16</td>
       <td>Scottie Scheffler -11
--2 thru 8</td>
+-2 thru 9</td>
       <td>Cameron Smith -7
 -1 thru 8</td>
-      <td>Corey Conners -1
-E thru 11</td>
+      <td>Corey Conners E
++1 thru 12</td>
       <td>Viktor Hovland(W) +2
 -1 thru 15</td>
       <td class="greyout leftborder">Tyrrell Hatton +17
@@ -253,13 +253,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Luke Watson</td>
-      <td class="bigbold">-17</td>
+      <td class="bigbold">-16</td>
       <td>Scottie Scheffler -11
--2 thru 8</td>
+-2 thru 9</td>
       <td>Cameron Smith(W) -7
 -1 thru 8</td>
-      <td>Corey Conners -1
-E thru 11</td>
+      <td>Corey Conners E
++1 thru 12</td>
       <td>Talor Gooch +2
 -1 thru 16</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -269,13 +269,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey B</td>
-      <td class="bigbold">-17</td>
+      <td class="bigbold">-16</td>
       <td>Scottie Scheffler(W) -11
--2 thru 8</td>
+-2 thru 9</td>
       <td>Rory McIlroy -6
 -7 thru 13</td>
-      <td>Corey Conners -1
-E thru 11</td>
+      <td>Corey Conners E
++1 thru 12</td>
       <td>Robert MacIntyre +3
 -3 (F)</td>
       <td class="greyout leftborder">Jon Rahm +4
@@ -285,15 +285,15 @@ E thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Stan and Ollie Garch</td>
-      <td class="bigbold">-17</td>
+      <td class="bigbold">-16</td>
       <td>Scottie Scheffler -11
--2 thru 8</td>
+-2 thru 9</td>
       <td>Shane Lowry -3
 -1 thru 10</td>
       <td>Justin Thomas(W) -2
 -1 thru 10</td>
-      <td>Corey Conners -1
-E thru 11</td>
+      <td>Corey Conners E
++1 thru 12</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -301,15 +301,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-13</td>
+      <td class="bigbold">-14</td>
       <td>Cameron Smith -7
 -1 thru 8</td>
       <td>Shane Lowry -3
 -1 thru 10</td>
       <td>Justin Thomas(W) -2
 -1 thru 10</td>
-      <td>Will Zalatoris -1
--3 thru 14</td>
+      <td>Will Zalatoris -2
+-4 thru 15</td>
       <td class="greyout leftborder">Matthew Fitzpatrick +2
 -2 (F)</td>
       <td class="greyout">Brooks Koepka
@@ -325,21 +325,37 @@ Missed Cut</td>
       <td>Justin Thomas -2
 -1 thru 10</td>
       <td>Hideki Matsuyama +2
-E thru 15</td>
+E thru 16</td>
       <td class="greyout leftborder">Tiger Woods +13
 +6 (F)</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Ez Game Ez Life</td>
+      <td class="bigbold">-12</td>
+      <td>Rory McIlroy -6
+-7 thru 13</td>
+      <td>Collin Morikawa -2
+-3 thru 13</td>
+      <td>Justin Thomas -2
+-1 thru 10</td>
+      <td>Will Zalatoris -2
+-4 thru 15</td>
+      <td class="greyout leftborder">Viktor Hovland +2
+-1 thru 15</td>
+      <td class="greyout">Tiger Woods(W) +13
++6 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Matt Wilson</td>
       <td class="bigbold">-11</td>
       <td>Scottie Scheffler(W) -11
--2 thru 8</td>
-      <td>Corey Conners -1
-E thru 11</td>
-      <td>Will Zalatoris -1
--3 thru 14</td>
+-2 thru 9</td>
+      <td>Will Zalatoris -2
+-4 thru 15</td>
+      <td>Corey Conners E
++1 thru 12</td>
       <td>Jon Rahm +4
 -3 (F)</td>
       <td class="greyout leftborder">Xander Schauffele
@@ -348,26 +364,10 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Ez Game Ez Life</td>
-      <td class="bigbold">-11</td>
-      <td>Rory McIlroy -6
--7 thru 13</td>
-      <td>Collin Morikawa -2
--3 thru 13</td>
-      <td>Justin Thomas -2
--1 thru 10</td>
-      <td>Will Zalatoris -1
--3 thru 14</td>
-      <td class="greyout leftborder">Viktor Hovland +2
--1 thru 15</td>
-      <td class="greyout">Tiger Woods(W) +13
-+6 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Fred Jamieson</td>
       <td class="bigbold">-11</td>
       <td>Scottie Scheffler -11
--2 thru 8</td>
+-2 thru 9</td>
       <td>Rory McIlroy -6
 -7 thru 13</td>
       <td>Viktor Hovland +2
@@ -386,10 +386,10 @@ Missed Cut</td>
 -7 thru 13</td>
       <td>Justin Thomas(W) -2
 -1 thru 10</td>
-      <td>Corey Conners -1
-E thru 11</td>
-      <td>Will Zalatoris -1
--3 thru 14</td>
+      <td>Will Zalatoris -2
+-4 thru 15</td>
+      <td>Corey Conners E
++1 thru 12</td>
       <td class="greyout leftborder">Jon Rahm +4
 -3 (F)</td>
       <td class="greyout">Brooks Koepka
@@ -412,30 +412,14 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Tom Davis</td>
-      <td class="bigbold">-10</td>
-      <td>Cameron Smith -7
--1 thru 8</td>
-      <td>Shane Lowry -3
--1 thru 10</td>
-      <td>Corey Conners -1
-E thru 11</td>
-      <td>Dustin Johnson(W) +1
-E thru 14</td>
-      <td class="greyout leftborder">Patrick Cantlay +7
--1 (F)</td>
-      <td class="greyout">Louis Oosthuizen
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Albert Selina</td>
       <td class="bigbold">-9</td>
       <td>Scottie Scheffler -11
--2 thru 8</td>
-      <td>Corey Conners -1
-E thru 11</td>
-      <td>Will Zalatoris -1
--3 thru 14</td>
+-2 thru 9</td>
+      <td>Will Zalatoris -2
+-4 thru 15</td>
+      <td>Corey Conners E
++1 thru 12</td>
       <td>Jon Rahm(W) +4
 -3 (F)</td>
       <td class="greyout leftborder">Webb Simpson +9
@@ -444,26 +428,26 @@ E thru 11</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">The Resort</td>
+      <td class="bigbold">Tom Davis</td>
       <td class="bigbold">-9</td>
-      <td>Cameron Smith(W) -7
+      <td>Cameron Smith -7
 -1 thru 8</td>
       <td>Shane Lowry -3
 -1 thru 10</td>
-      <td>Corey Conners -1
-E thru 11</td>
-      <td>Viktor Hovland +2
--1 thru 15</td>
-      <td class="greyout leftborder">Hideki Matsuyama +2
-E thru 15</td>
-      <td class="greyout">Jon Rahm +4
--3 (F)</td>
+      <td>Corey Conners E
++1 thru 12</td>
+      <td>Dustin Johnson(W) +1
+E thru 14</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
+-1 (F)</td>
+      <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">The Dub</td>
       <td class="bigbold">-9</td>
       <td>Scottie Scheffler -11
--2 thru 8</td>
+-2 thru 9</td>
       <td>Cameron Smith(W) -7
 -1 thru 8</td>
       <td>Matthew Fitzpatrick +2
@@ -498,24 +482,56 @@ Missed Cut</td>
 -7 thru 13</td>
       <td>Collin Morikawa -2
 -3 thru 13</td>
-      <td>Corey Conners -1
-E thru 11</td>
-      <td>Will Zalatoris -1
--3 thru 14</td>
+      <td>Will Zalatoris -2
+-4 thru 15</td>
+      <td>Corey Conners E
++1 thru 12</td>
       <td class="greyout leftborder">Viktor Hovland +2
 -1 thru 15</td>
       <td class="greyout">Xander Schauffele(W)
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Neil Hardy</td>
+      <td class="bigbold">The Resort</td>
       <td class="bigbold">-8</td>
+      <td>Cameron Smith(W) -7
+-1 thru 8</td>
+      <td>Shane Lowry -3
+-1 thru 10</td>
+      <td>Corey Conners E
++1 thru 12</td>
+      <td>Viktor Hovland +2
+-1 thru 15</td>
+      <td class="greyout leftborder">Hideki Matsuyama +2
+E thru 16</td>
+      <td class="greyout">Jon Rahm +4
+-3 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Hadrian&#39;s Wall</td>
+      <td class="bigbold">-7</td>
+      <td>Cameron Smith -7
+-1 thru 8</td>
+      <td>Will Zalatoris -2
+-4 thru 15</td>
+      <td>Corey Conners E
++1 thru 12</td>
+      <td>Viktor Hovland +2
+-1 thru 15</td>
+      <td class="greyout leftborder">Jon Rahm(W) +4
+-3 (F)</td>
+      <td class="greyout">Patrick Cantlay +7
+-1 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Neil Hardy</td>
+      <td class="bigbold">-7</td>
       <td>Cameron Smith(W) -7
 -1 thru 8</td>
       <td>Justin Thomas -2
 -1 thru 10</td>
-      <td>Corey Conners -1
-E thru 11</td>
+      <td>Corey Conners E
++1 thru 12</td>
       <td>Viktor Hovland +2
 -1 thru 15</td>
       <td class="greyout leftborder">Xander Schauffele
@@ -525,35 +541,19 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Bill Hunter</td>
-      <td class="bigbold">-8</td>
+      <td class="bigbold">-7</td>
       <td>Cameron Smith(W) -7
 -1 thru 8</td>
       <td>Justin Thomas -2
 -1 thru 10</td>
-      <td>Corey Conners -1
-E thru 11</td>
+      <td>Corey Conners E
++1 thru 12</td>
       <td>Hideki Matsuyama +2
-E thru 15</td>
+E thru 16</td>
       <td class="greyout leftborder">Marc Leishman +6
 +3 thru 16</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Hadrian&#39;s Wall</td>
-      <td class="bigbold">-7</td>
-      <td>Cameron Smith -7
--1 thru 8</td>
-      <td>Corey Conners -1
-E thru 11</td>
-      <td>Will Zalatoris -1
--3 thru 14</td>
-      <td>Viktor Hovland +2
--1 thru 15</td>
-      <td class="greyout leftborder">Jon Rahm(W) +4
--3 (F)</td>
-      <td class="greyout">Patrick Cantlay +7
--1 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Glitter Girl</td>
@@ -572,12 +572,28 @@ E thru 11</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Santorini Sunrises</td>
+      <td class="bigbold">-5</td>
+      <td>Cameron Smith -7
+-1 thru 8</td>
+      <td>Will Zalatoris -2
+-4 thru 15</td>
+      <td>Corey Conners(W) E
++1 thru 12</td>
+      <td>Jon Rahm +4
+-3 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Lyle Rattray</td>
-      <td class="bigbold">-6</td>
+      <td class="bigbold">-5</td>
       <td>Scottie Scheffler -11
--2 thru 8</td>
-      <td>Corey Conners -1
-E thru 11</td>
+-2 thru 9</td>
+      <td>Corey Conners E
++1 thru 12</td>
       <td>Viktor Hovland +2
 -1 thru 15</td>
       <td>Jon Rahm +4
@@ -588,42 +604,10 @@ E thru 11</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Santorini Sunrises</td>
-      <td class="bigbold">-5</td>
-      <td>Cameron Smith -7
--1 thru 8</td>
-      <td>Corey Conners(W) -1
-E thru 11</td>
-      <td>Will Zalatoris -1
--3 thru 14</td>
-      <td>Jon Rahm +4
--3 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Brian McDonald</td>
-      <td class="bigbold">-5</td>
-      <td>Rory McIlroy -6
--7 thru 13</td>
-      <td>Justin Thomas -2
--1 thru 10</td>
-      <td>Corey Conners -1
-E thru 11</td>
-      <td>Jon Rahm(W) +4
--3 (F)</td>
-      <td class="greyout leftborder">Xander Schauffele
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Uphill into the Wind</td>
       <td class="bigbold">-5</td>
       <td>Scottie Scheffler(W) -11
--2 thru 8</td>
+-2 thru 9</td>
       <td>Cameron Smith -7
 -1 thru 8</td>
       <td>Patrick Cantlay +7
@@ -636,35 +620,51 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Ron Harrington</td>
-      <td class="bigbold">-4</td>
-      <td>Cameron Smith -7
--1 thru 8</td>
-      <td>Corey Conners -1
-E thru 11</td>
-      <td>Talor Gooch +2
--1 thru 16</td>
-      <td>Hideki Matsuyama +2
-E thru 15</td>
-      <td class="greyout leftborder">Jon Rahm(W) +4
--3 (F)</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">New Lu</td>
-      <td class="bigbold">-3</td>
+      <td class="bigbold">-4</td>
       <td>Cameron Smith -7
 -1 thru 8</td>
       <td>Justin Thomas(W) -2
 -1 thru 10</td>
-      <td>Will Zalatoris -1
--3 thru 14</td>
+      <td>Will Zalatoris -2
+-4 thru 15</td>
       <td>Patrick Cantlay +7
 -1 (F)</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Brian McDonald</td>
+      <td class="bigbold">-4</td>
+      <td>Rory McIlroy -6
+-7 thru 13</td>
+      <td>Justin Thomas -2
+-1 thru 10</td>
+      <td>Corey Conners E
++1 thru 12</td>
+      <td>Jon Rahm(W) +4
+-3 (F)</td>
+      <td class="greyout leftborder">Xander Schauffele
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Ron Harrington</td>
+      <td class="bigbold">-3</td>
+      <td>Cameron Smith -7
+-1 thru 8</td>
+      <td>Corey Conners E
++1 thru 12</td>
+      <td>Talor Gooch +2
+-1 thru 16</td>
+      <td>Hideki Matsuyama +2
+E thru 16</td>
+      <td class="greyout leftborder">Jon Rahm(W) +4
+-3 (F)</td>
+      <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
@@ -685,11 +685,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Walk 1</td>
-      <td class="bigbold">3</td>
+      <td class="bigbold">2</td>
       <td>Collin Morikawa -2
 -3 thru 13</td>
-      <td>Will Zalatoris -1
--3 thru 14</td>
+      <td>Will Zalatoris -2
+-4 thru 15</td>
       <td>Viktor Hovland(W) +2
 -1 thru 15</td>
       <td>Jon Rahm +4
@@ -701,11 +701,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Glen Wilson</td>
-      <td class="bigbold">3</td>
+      <td class="bigbold">2</td>
       <td>Justin Thomas(W) -2
 -1 thru 10</td>
-      <td>Will Zalatoris -1
--3 thru 14</td>
+      <td>Will Zalatoris -2
+-4 thru 15</td>
       <td>Viktor Hovland +2
 -1 thru 15</td>
       <td>Jon Rahm +4
@@ -717,11 +717,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Kash Ahmad</td>
-      <td class="bigbold">3</td>
+      <td class="bigbold">2</td>
       <td>Justin Thomas -2
 -1 thru 10</td>
-      <td>Will Zalatoris -1
--3 thru 14</td>
+      <td>Will Zalatoris -2
+-4 thru 15</td>
       <td>Viktor Hovland +2
 -1 thru 15</td>
       <td>Jon Rahm(W) +4
@@ -749,11 +749,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">4</td>
+      <td class="bigbold">5</td>
       <td>Collin Morikawa -2
 -3 thru 13</td>
-      <td>Corey Conners(W) -1
-E thru 11</td>
+      <td>Corey Conners(W) E
++1 thru 12</td>
       <td>Robert MacIntyre +3
 -3 (F)</td>
       <td>Jon Rahm +4
@@ -765,11 +765,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Low Golf IQ</td>
-      <td class="bigbold">4</td>
+      <td class="bigbold">5</td>
       <td>Shane Lowry(W) -3
 -1 thru 10</td>
-      <td>Corey Conners -1
-E thru 11</td>
+      <td>Corey Conners E
++1 thru 12</td>
       <td>Viktor Hovland +2
 -1 thru 15</td>
       <td>Joaquin Niemann +6
@@ -797,11 +797,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Don Shaw</td>
-      <td class="bigbold">9</td>
+      <td class="bigbold">10</td>
       <td>Cameron Smith -7
 -1 thru 8</td>
-      <td>Corey Conners -1
-E thru 11</td>
+      <td>Corey Conners E
++1 thru 12</td>
       <td>Jon Rahm(W) +4
 -3 (F)</td>
       <td>Tiger Woods +13
@@ -833,7 +833,7 @@ Missed Cut</td>
       <td>Collin Morikawa(W) -2
 -3 thru 13</td>
       <td>Hideki Matsuyama +2
-E thru 15</td>
+E thru 16</td>
       <td>Jon Rahm +4
 -3 (F)</td>
       <td>Patrick Cantlay +7
@@ -865,7 +865,7 @@ Missed Cut</td>
       <td>Justin Thomas -2
 -1 thru 10</td>
       <td>Hideki Matsuyama +2
-E thru 15</td>
+E thru 16</td>
       <td>Jon Rahm(W) +4
 -3 (F)</td>
       <td>Patrick Cantlay +7
@@ -879,7 +879,7 @@ Missed Cut</td>
       <td class="bigbold">CRED</td>
       <td class="bigbold">13</td>
       <td>Scottie Scheffler -11
--2 thru 8</td>
+-2 thru 9</td>
       <td>Dustin Johnson +1
 E thru 14</td>
       <td>Patrick Cantlay +7
