--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 5:02:06 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 5:02:51 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -301,13 +301,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
-      <td class="bigbold">7</td>
+      <td class="bigbold">6</td>
       <td>Justin Thomas -1
 E thru 11</td>
+      <td>Dustin Johnson E
+-1 thru 15</td>
       <td>Corey Conners E
 +1 thru 12</td>
-      <td>Dustin Johnson +1
-E thru 14</td>
       <td>Russell Henley +5
 -2 (F)</td>
       <td class="greyout leftborder">Xander Schauffele(W)
@@ -349,9 +349,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">16</td>
-      <td>Dustin Johnson +1
-E thru 14</td>
+      <td class="bigbold">15</td>
+      <td>Dustin Johnson E
+-1 thru 15</td>
       <td>Viktor Hovland +2
 -1 thru 16</td>
       <td>Jon Rahm +4
