--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 5:02:06 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 5:02:51 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -412,6 +412,22 @@ E thru 11</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Tom Davis</td>
+      <td class="bigbold">-10</td>
+      <td>Cameron Smith -7
+-1 thru 9</td>
+      <td>Shane Lowry -3
+-1 thru 10</td>
+      <td>Dustin Johnson(W) E
+-1 thru 15</td>
+      <td>Corey Conners E
++1 thru 12</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
+-1 (F)</td>
+      <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Grace</td>
       <td class="bigbold">-9</td>
       <td>Rory McIlroy -6
@@ -441,22 +457,6 @@ E thru 11</td>
       <td class="greyout leftborder">Patrick Cantlay +7
 -1 (F)</td>
       <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Tom Davis</td>
-      <td class="bigbold">-9</td>
-      <td>Cameron Smith -7
--1 thru 9</td>
-      <td>Shane Lowry -3
--1 thru 10</td>
-      <td>Corey Conners E
-+1 thru 12</td>
-      <td>Dustin Johnson(W) +1
-E thru 14</td>
-      <td class="greyout leftborder">Patrick Cantlay +7
--1 (F)</td>
-      <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
     </tr>
     <tr>
@@ -668,6 +668,22 @@ E thru 16</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Lorette Hosegood</td>
+      <td class="bigbold">0</td>
+      <td>Rory McIlroy(W) -6
+-7 thru 14</td>
+      <td>Dustin Johnson E
+-1 thru 15</td>
+      <td>Viktor Hovland +2
+-1 thru 16</td>
+      <td>Jon Rahm +4
+-3 (F)</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
+-1 (F)</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Walk 1</td>
       <td class="bigbold">1</td>
       <td>Will Zalatoris -3
@@ -681,22 +697,6 @@ Missed Cut</td>
       <td class="greyout leftborder">Patrick Cantlay +7
 -1 (F)</td>
       <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Lorette Hosegood</td>
-      <td class="bigbold">1</td>
-      <td>Rory McIlroy(W) -6
--7 thru 14</td>
-      <td>Dustin Johnson +1
-E thru 14</td>
-      <td>Viktor Hovland +2
--1 thru 16</td>
-      <td>Jon Rahm +4
--3 (F)</td>
-      <td class="greyout leftborder">Patrick Cantlay +7
--1 (F)</td>
-      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -764,6 +764,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Wild Billy Mitchell</td>
+      <td class="bigbold">5</td>
+      <td>Shane Lowry -3
+-1 thru 10</td>
+      <td>Dustin Johnson(W) E
+-1 thru 15</td>
+      <td>Matthew Fitzpatrick +2
+-2 (F)</td>
+      <td>Tony Finau +6
++2 (F)</td>
+      <td class="greyout leftborder">Louis Oosthuizen
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Low Golf IQ</td>
       <td class="bigbold">5</td>
       <td>Shane Lowry(W) -3
@@ -777,22 +793,6 @@ Missed Cut</td>
       <td class="greyout leftborder">Sam Burns
 Missed Cut</td>
       <td class="greyout">Brian Harman
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Wild Billy Mitchell</td>
-      <td class="bigbold">6</td>
-      <td>Shane Lowry -3
--1 thru 10</td>
-      <td>Dustin Johnson(W) +1
-E thru 14</td>
-      <td>Matthew Fitzpatrick +2
--2 (F)</td>
-      <td>Tony Finau +6
-+2 (F)</td>
-      <td class="greyout leftborder">Louis Oosthuizen
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -844,6 +844,22 @@ Out With Injury</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">CRED</td>
+      <td class="bigbold">12</td>
+      <td>Scottie Scheffler -11
+-2 thru 9</td>
+      <td>Dustin Johnson E
+-1 thru 15</td>
+      <td>Patrick Cantlay +7
+-1 (F)</td>
+      <td>Adam Scott +14
++2 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka(W)
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Al Shulman</td>
       <td class="bigbold">12</td>
       <td>Justin Thomas(W) -1
@@ -876,19 +892,19 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">CRED</td>
-      <td class="bigbold">13</td>
-      <td>Scottie Scheffler -11
--2 thru 9</td>
-      <td>Dustin Johnson +1
-E thru 14</td>
+      <td class="bigbold">Matt Tummon</td>
+      <td class="bigbold">15</td>
+      <td>Dustin Johnson E
+-1 thru 15</td>
+      <td>Viktor Hovland +2
+-1 thru 16</td>
+      <td>Jon Rahm +4
+-3 (F)</td>
       <td>Patrick Cantlay +7
 -1 (F)</td>
-      <td>Adam Scott +14
-+2 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka(W)
+      <td class="greyout leftborder">Jordan Spieth(W)
 Missed Cut</td>
-      <td class="greyout">Xander Schauffele
+      <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
@@ -905,22 +921,6 @@ Missed Cut</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">16</td>
-      <td>Dustin Johnson +1
-E thru 14</td>
-      <td>Viktor Hovland +2
--1 thru 16</td>
-      <td>Jon Rahm +4
--3 (F)</td>
-      <td>Patrick Cantlay +7
--1 (F)</td>
-      <td class="greyout leftborder">Jordan Spieth(W)
-Missed Cut</td>
-      <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
